# easysubmit

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/: sbatch.py  slurm.py  slurm_cluster.py  slurm_scheduler.py  slurm_scheduler_with_profile.py  tasks.py  tasks_1.py  tasks_2.py
src/easysubmit/: __init__.py  base.py  entities.py  helpers.py  profiler.py  slurm.py  srun.py  utils.py
