[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easysubmit"
dynamic = ["version"]
description = "A Python library for simplified job scheduling and management on SLURM clusters"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "slurm",
    "job-scheduling",
    "cluster-computing",
    "hpc",
    "batch-processing",
    "distributed-computing",
    "workflow",
    "task-management",
    "scientific-computing",
    "parallel-computing",
]
authors = [
    { name = "Yasas Senarath", email = "12231659+ysenarath@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["nightjar>=0.0.5", "typing-extensions>=4.12.2"]

[dependency-groups]
dev = ["twine", "ruff"]

[project.urls]
Documentation = "https://github.com/ysenarath/easysubmit#readme"
Issues = "https://github.com/ysenarath/easysubmit/issues"
Source = "https://github.com/ysenarath/easysubmit"

[project.optional-dependencies]
scalene = ["scalene>=1.5.51"]

[tool.hatch.version]
path = "src/easysubmit/__init__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/easysubmit tests}"

[tool.coverage.run]
source_pkgs = ["easysubmit", "tests"]
branch = true
parallel = true
omit = ["src/easysubmit/__about__.py"]

[tool.coverage.paths]
easysubmit = ["src/easysubmit", "*/easysubmit/src/easysubmit"]
tests = ["tests", "*/easysubmit/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
